2015-01-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCast.c:
	  Do not try to output debug info in case of fatal errors - patch #260 by Peter Dons Tychsen

2016-01-05 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCicode.c
	  Fix bug: members of pointer arrays are always treated as r-values.
	* support/regression/tests/gcc-torture-execute-930526-1.c
	  Improve test case.
	* support/sdbinutils/binutils/arlex.c
	  Removed.

2015-01-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c:
	  Fix handling of nop in z80MightRead, patch #259 by alvin.
	* src/SDCCicode.c:
	  Optimize comparisons of cheap variables to expensive constants.

2015-01-03 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/linksrc/lkarea.c:
	  Fix handling of NOLOAD for STM8 in linker, patch by Peter Dons Tychsen.
	* src/SDCCralloc.hpp:
	  Fix compare operator for register assignments.

2016-01-02 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/sdbinutils/binutils/arparse.c
	* support/sdbinutils/binutils/arparse.h
	  Delete intermediate files.

2016-01-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* all.vcxproj,
	* config.vcxproj,
	* sdas/as6808/as_hc08.vcxproj,
	* sdas/as8051/asx8051.vcxproj,
	* sdas/as8xcxxx/sdas390.vcxproj,
	* sdas/asgb/asgb.vcxproj,
	* sdas/linksrc/aslink.vcxproj,
	* src/avr/avr.vcxproj,
	* src/ds390/ds390.vcxproj,
	* src/hc08/hc08.vcxproj,
	* src/mcs51/mcs51.vcxproj,
	* src/pic14/pic14.vcxproj,
	* src/pic16/pic16.vcxproj,
	* src/sdcc.vcxproj,
	* src/xa51/xa51.vcxproj,
	* src/z80/z80.vcxproj,
	* src/z80/z80a.vcxproj,
	* support/cpp/sdcpp.vcxproj,
	* support/librarian/librarian.vcxproj,
	* support/makebin/makebin.vcxproj,
	* support/packihx/packihx.vcxproj: applied patch 252 by Peter Dons Tychsen
	  to remove UpgradeFromVC60.props

2015-12-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCdwarf2.c:
	  Fix memory bug in DWARF output, patch by Peter Dons Tychsen.
	* sdas/asxxsrc/asdbg.c:
	  Fix 0 pointer access when specifying -y or -j without -o.
